# CLASDE

./: .env_example  .gitignore  AGENT.md  GEMINI.md  README.md  billrun.sh  clasde_memory.json  loop.py  pyproject.toml  test_campaign.yaml  visualize_loop.py
agents/: base_agent.py  builder.py  builder_agent.py  collaborator.py  collaborator_agent.py  compute.py  dynamics.py  evaluator.py  evaluator_agent.py  governor.py  governor_agent.py  hypothesis_agent.py  memory.py  mlip_manager.py  planner_agent.py  strategist.py  strategist_agent.py
cli/: builder_cli.py  collaborator_cli.py  explore_cli.py  loop_cli.py  visualize_cli.py
configs/: default.yaml
core/: acquisition.py  action.py  campaign.py  reward.py  state.py  surrogate.py  transition.py
examples/: teaching_demo.py
examples/teaching_results/: teaching_memory.json  teaching_research_log.md
execution/: active_learning_runner.py  adsorption_site_finder.py  compute_agent.py  coverage_generator.py  dynamics_engine.py  mlip_manager.py  neb_runner.py  slab_generator.py  workflow_runner.py
execution/templates/: slurm_vasp.sh
memory/: embedding_index.py  experiment_db.py  hypothesis_db.py  knowledge_graph.py  literature_db.py
optimization/: acquisition.py  acquisition_functions.py  campaign_optimizer.py  surrogate.py  surrogate_models.py
research/: experiment_graph.py  hypothesis_agent.py  planner_agent.py  theory_builder.py
results/: clasde_memory.json
science/: descriptors.py  experiment_graph.py  objective_functions.py  reaction_network.py  theory_builder.py
teaching/: teaching_demo.py
teaching/teaching_results/: TEACHING_GUIDE.md  (+2 more)
tests/: test_agents.py  test_graph.py  test_optimizer.py
workflows/: adsorption_campaign.py  autonomous_campaign.py  mlip_active_learning.py
