[project]
name = "clasde"
version = "0.1.0"
description = "Formalized Closed-Loop Surface Optimization Engine"
authors = [
    { name = "Mengren Bill Liu" }
]
dependencies = [
    "ase",
    "pymatgen",
    "numpy",
    "scipy",
    "scikit-learn",
    "pydantic",
    "networkx",
    "matplotlib",
    "pyyaml",
    "typing_extensions"
]

[project.scripts]
clasde-loop = "loop:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
