[project]
name = "clasde"
version = "0.1.0"
description = "Formalized Closed-Loop Surface Optimization Engine"
authors = [
    { name = "Mengren Bill Liu" }
]
dependencies = [
    "ase",
    "pymatgen",
    "numpy",
    "scipy",
    "scikit-learn",
    "pydantic",
    "networkx",
    "matplotlib",
    "pyyaml",
    "typing_extensions",
    "google-generativeai",
    "python-dotenv"
]

[project.scripts]
clasde-loop = "cli.loop_cli:main"
clasde-builder = "cli.builder_cli:main"
clasde-visualize = "cli.visualize_cli:main"
clasde-collaborator = "cli.collaborator_cli:main"
clasde-explore = "cli.explore_cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
